Project/C Grammar/Grammar/Grammar.output
Grammar

    0 $accept: compileUnit $end

    1 compileUnit: statements

    2 statements: statement
    3           | statements statement

    4 statement: expression ';'
    5          | ';'

    6 expression: NUMBER
    7           | expression '+' expression
    8           | expression '-' expression
    9           | expression '*' expression
   10           | expression '/' expression


Terminals, with rules where they appear

$end (0) 0
'*' (42) 9
'+' (43) 7
'-' (45) 8
'/' (47) 10
';' (59) 4 5
error (256)
NUMBER (258) 6


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
compileUnit (10)
    on left: 1, on right: 0
statements (11)
    on left: 2 3, on right: 1 3
statement (12)
    on left: 4 5, on right: 2 3
expression (13)
    on left: 6 7 8 9 10, on right: 4 7 8 9 10


State 0

    0 $accept: . compileUnit $end

    NUMBER  shift, and go to state 1
    ';'     shift, and go to state 2

    compileUnit  go to state 3
    statements   go to state 4
    statement    go to state 5
    expression   go to state 6


State 1

    6 expression: NUMBER .

    $default  reduce using rule 6 (expression)


State 2

    5 statement: ';' .

    $default  reduce using rule 5 (statement)


State 3

    0 $accept: compileUnit . $end

    $end  shift, and go to state 7


State 4

    1 compileUnit: statements .
    3 statements: statements . statement

    NUMBER  shift, and go to state 1
    ';'     shift, and go to state 2

    $default  reduce using rule 1 (compileUnit)

    statement   go to state 8
    expression  go to state 6


State 5

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 6

    4 statement: expression . ';'
    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression

    '+'  shift, and go to state 9
    '-'  shift, and go to state 10
    '*'  shift, and go to state 11
    '/'  shift, and go to state 12
    ';'  shift, and go to state 13


State 7

    0 $accept: compileUnit $end .

    $default  accept


State 8

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 9

    7 expression: expression '+' . expression

    NUMBER  shift, and go to state 1

    expression  go to state 14


State 10

    8 expression: expression '-' . expression

    NUMBER  shift, and go to state 1

    expression  go to state 15


State 11

    9 expression: expression '*' . expression

    NUMBER  shift, and go to state 1

    expression  go to state 16


State 12

   10 expression: expression '/' . expression

    NUMBER  shift, and go to state 1

    expression  go to state 17


State 13

    4 statement: expression ';' .

    $default  reduce using rule 4 (statement)


State 14

    7 expression: expression . '+' expression
    7           | expression '+' expression .
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 7 (expression)


State 15

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    8           | expression '-' expression .
    9           | expression . '*' expression
   10           | expression . '/' expression

    '*'  shift, and go to state 11
    '/'  shift, and go to state 12

    $default  reduce using rule 8 (expression)


State 16

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
    9           | expression '*' expression .
   10           | expression . '/' expression

    $default  reduce using rule 9 (expression)


State 17

    7 expression: expression . '+' expression
    8           | expression . '-' expression
    9           | expression . '*' expression
   10           | expression . '/' expression
   10           | expression '/' expression .

    $default  reduce using rule 10 (expression)
